tests/integration/snapshots/integration__conformance__n_object_double_colon.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
command: "jjp"
status: 1
success: false
stdout ---
{"x"::"b"}
stderr ---
error: expected json value, found `:`
 --> stdin:1:6
  |
1 | {"x"::"b"}
  |     -^
  |     |
  |     expected due to `:`
